samples/_failures_safe/1761453741_7db404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87986891.c: In function ‘tokenize’:
./samples/SAFE/__tmp_87986891.c:175:5: error: expected expression at end of input
  175 |     int line =
      |     ^~~
./samples/SAFE/__tmp_87986891.c:175:5: error: expected declaration or statement at end of input
